--- a/octoprint_freemobilenotifier/templates/freemobilenotifier_settings.jinja2
+++ b/octoprint_freemobilenotifier/templates/freemobilenotifier_settings.jinja2
@@ -1,4 +1,4 @@
-<h3>{{ _('SMS Notifier Configuration Bienvenu') }}</h3>
+<h3>{{ _('SMS Notifier Configuration ') }}</h3>
 
 <form class="form-horizontal">
 	<div class="control-group">
