--- a/octoprint_freemobilenotifier/templates/freemobilenotifier_settings.jinja2
+++ b/octoprint_freemobilenotifier/templates/freemobilenotifier_settings.jinja2
@@ -4,12 +4,12 @@
 	<div class="control-group">
 		<div class="controls" title="{{ _('You can toggle whether notifications are enabled while a print is in progress.') }}">
 			<label class="checkbox">
-				<input type="checkbox" data-bind="checked: settings.plugins.freemobilenotifier.enabled" /> {{ _('Enabled') }}
+				<input type="checkbox" data-bind="checked: settings.plugins.freemobilenotifier.enabled" /> {{ _('Activer') }}
 			</label>
 		</div>
 	</div>
 
-	<h4>{{ _('FreeMobile Settings') }}</h4>
+	<h4>{{ _('Paramètres FreeMobile') }}</h4>
 
 	<div class="control-group" title="{{ _('Login') }}">
 		<label class="control-label">{{ _('Login') }}</label>
@@ -25,7 +25,7 @@
 		</div>
 	</div>
 
-	<h4>{{ _('Message Content') }}</h4>
+	<h4>{{ _('Contenu du message') }}</h4>
 	
 	<p>{{ _('The SMS template may contain the tags <code>{filename}</code> and <code>{elapsed_time}</code>.') }}</p>
 
